# DictateAnywhere

./: # Fix All 26 DictateAnywhere Issues.txt  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMINGSOON.md  CONTRIBUTING.md  FAQ.md  INSTALL_MACOS.md  ISSUES.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
assets/icons/: README.md
scripts/: build.bat  clean_icons.py  copy_assets.py  create_venv.bat  create_venv.sh  download_fonts.py  generate_icons.py  install.bat  install.sh  run.bat  run.sh  run_dev.bat  run_dev.sh  test.bat  test.sh  uninstall.bat  uninstall.sh
src/dictateanywhere/: __init__.py  __main__.py  main.py
src/dictateanywhere/audio/: capture.py  vad.py
src/dictateanywhere/core/: __init__.py  corrections.py  hotkey_manager.py  polish.py  punctuation.py  text_injector.py  updater.py
src/dictateanywhere/transcription/: __init__.py  cloud_engine.py  engine.py  gemini_engine.py  local_engine.py  sarvam_engine.py
src/dictateanywhere/ui/: __init__.py  floating_widget.py  history_window.py  preview_window.py  settings_window.py  tray.py
src/dictateanywhere/utils/: __init__.py  config.py  secure_storage.py
tests/: __init__.py  conftest.py  test_config.py  test_punctuation.py
