[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DictateAnywhere"
version = "1.2.0"
description = "Hybrid voice dictation for Windows — types anywhere using offline faster-whisper and Azure/Sarvam cloud backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "DictateAnywhere Contributors" }
]
keywords = ["dictation", "speech-to-text", "voice", "windows", "whisper", "azure", "sarvam", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.5.1",
    "numpy>=1.26.4",
    "webrtcvad-wheels>=2.0.14",
    "faster-whisper>=1.0.3",
    "azure-cognitiveservices-speech>=1.37.0",
    "keyring>=25.2.1",
    "pystray>=0.19.5",
    "Pillow>=10.4.0",
    "keyboard>=0.13.5",
    "pywin32>=311",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/RhythmicDias/DictateAnywhere"
Repository = "https://github.com/RhythmicDias/DictateAnywhere"
"Bug Tracker" = "https://github.com/RhythmicDias/DictateAnywhere/issues"
Changelog = "https://github.com/RhythmicDias/DictateAnywhere/blob/main/CHANGELOG.md"

[project.scripts]
dictateanywhere = "dictateanywhere.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dictateanywhere = ["assets/icons/*"]
